css/docpage.css
/*****************
 Categories Bar
*****************/

div.toc-categories {
  background-color: #ccc;
  line-height: 48px;
  font-size: 18px;
  color: black;
  display: none;
  overflow: auto;
}
div.toc-categories .pull-left {
  float: left;
  margin-left: 10px;
}

div.toc-categories .pull-right {
  float: right;
  margin-right: 10px;
}

div.toc-categories a {
  text-decoration: none;
}

/****************
 Docs Nav (Bottom)
****************/

div.doc-nav {
  font-size: 120%;
  overflow: auto;
  width: 100%;
}
div.doc-nav a{
  text-decoration: none;
}
div.doc-nav a:hover{
  text-decoration: underline;
}
div.doc-nav span.previous-toc {
  float: left;
  width: auto;
}
div.doc-nav span.back-to-toc {
  float: left;
  width: auto;
  margin-left: 15%;
}
div.doc-nav span.next-toc {
  float: right;
  width: 30%;
}


/*****************
 Main Area
*****************/

.int_text {
  margin-top:30px;
  margin-left: 30px;
}
.main-content .int_text img {
  margin: 30px 0px;
}
.int_title
{
  margin-left: 353px;
  text-align: left;
  margin-top: 30px;
}
.int_title::after{
  left: 0px;
}
.main-content .edit-link {
  position: relative;
  float: right;
  bottom: 100px;
  text-decoration: none;
  font-size: 24px;
  color: #333333;
}
div.int_title h1, div.main-content h1, div.main-content h2, div.main-content h3, div.main-content h4, div.main-content h5, div.main-content h6 {
  font-family: "PT Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: normal;
  line-height: 24px;
  color: #313030;
  margin: 0;
  padding: 0;
}
div.section > h2, div.section > h3, div.section > h4 {
  margin: 24px 0;
}
div.main-content h1, div.int_title h1 {
  border-top: none;
  font-size: 36px;
  line-height: 48px;
  padding: 0;
}

/*****************
 Code Blocks, Important
*****************/
div.highlight pre, code {
  background: #f5f6f7 url(/images/code-block-bg.png) 0 0 repeat;
  border-radius: 0;
  border: none;
  border-left: 5px solid #494747;
  font-family: 'Source Code Pro', monospace;
  font-size: 14px;
  line-height: 24px;
  overflow: auto;
  word-wrap: normal;
  white-space: pre;
}

pre {
  padding: 24px 12px;
  color: #222;
  margin: 24px 0;
}
code {
  background: #f5f6f7 url(/images/code-block-bg.png) 0 0 repeat;
  border-radius: 0;
  border: none;
  border-left: 5px;
  font-family: 'Source Code Pro', monospace;
  font-size: 14px;
  line-height: 24px;
  overflow: auto;
  word-wrap: normal;
  white-space: pre;
}

div.admonition {
  margin: 24px 0;
  width: auto;
  max-width: 100%;
  padding: 2px 12px 22px 12px;
  border-left: 5px solid transparent;
}
.admonition .admonition-title {
  margin-bottom: 0;
  font-size: 12px;
  font-weight: bold;
  text-transform: uppercase;
  line-height: 24px;
}
.admonition > p {
  margin: 0 0 12.5px 0;
}
.admonition p.first {
  margin-top: 0 !important;
}
.admonition > p.last {
  margin-bottom: 0;
}
.admonition .admonition-title:after {
  content: ":";
  font-weight: 900;
}
.admonition.important{
  background-color: #fff2d5;
  border-color: #ffb618;
}
.admonition.important .admonition-title {
  color: #ffb618;
}
.admonition.note{
  background-color: #edf4e8;
  border-color: #6ba442;
}

/***************************
/* Sidebar doc menu styles
***************************/

.sidebar {
  position: fixed;
  -webkit-transform: translateZ(0);
  background-color: #f5f6f7;
  width: 293px;
  height: auto;
  top: 50px;
  bottom: 0;
  left: 0;
  overflow-y: auto;
  overflow-x: hidden;
  font-size: 0.85em;
  z-index: 100;
  transition: left 0.4s cubic-bezier(.02,.01,.47,1);
  -moz-transition: left 0.4s cubic-bezier(.02,.01,.47,1);
  -webkit-transition: left 0.4s cubic-bezier(.02,.01,.47,1);
}
.int_text .sidebar.force-expand {
  left: 0px;
}
aside {
  display:block;
}
div.docsidebar {
  font-size: 14px;
  height: 100%;
}
div.docsidebarwrapper {
  padding: 0;
  padding-top: 24px;
  padding-bottom: 130px;
  /*min-height: 100%;*/
  position: relative;
}
div.docsidebar h3 {
  padding: 0 12px;
  font-size: 14px;
  line-height: 24px;
  font-weight: bold;
  margin: -3px 0 15px 0;
}
div.docsidebarwrapper ul {
  margin: 12px 0 0 0;
  padding: 0;
}
div.docsidebar ul {
  list-style: none;
  margin: 10px 0 10px 0;
  padding: 0;
  color: #000;
}
div.docsidebar ul li {
  background-color: ##F5F6F7;
}
.docsidebarwrapper > ul > .toctree-l1.current {
  background-color: #fff;
  border-right: 1px solid #f5f6f7;
}
.docsidebarwrapper a
{
  color: #333333;
  text-decoration: none;
}
.docsidebarwrapper > ul > ul.current {
  background-color: #fff;
  border-right: 1px solid #f5f6f7;
  margin-right: 0px;
}
.docsidebarwrapper > ul > .toctree-l1 {
  padding: 11px 0;
  line-height: 24px;
  border-top: 1px solid #ebebed;
}
.docsidebarwrapper > ul > .toctree-l1 > a {
  font-size: 18px;
  line-height: 24px;
  padding: 0 0 0 12px;
  width: 100%;
  display: inline-block;
}
div.docsidebar ul ul, div.docsidebar ul.want-points {
  list-style: none outside none;
  margin-left: 0;
}
div.docsidebar ul ul {
  margin-top: -8px;
  margin-bottom: 0;
}
div.docsidebar ul ul ul {
  margin-top: -3px;
}

.docsidebarwrapper li.toctree-l1 ul > li > a {
  line-height: 24px;
  display: inline-block;
  width: 100%;
}
div.docsidebar li.toctree-l2 > a {
  text-indent: -12px;
  padding-left: 37px;
}
div.docsidebar li.toctree-l3 > a {
  text-indent: -12px;
  padding-left: 48px;
}
span.expand, span.contract{
  float: left;
  position: relative;
  left: 12px;
  width: 0px;
  cursor: pointer;
  font-size: 70%;
}
span.contract {
  display: none;
}

.permalink
{
  text-decoration:none;
  font-size: 70%;
  color: #1A6BC7;
}
/****************************
/* Responsive media queries
/***************************/

@media (max-width: 320px) {
  .int_text {
    width: auto;
  }
  .int_title {
    width: auto;
  }
}
@media (max-width: 768px) {
  .int_text {
    width: auto;
  }
  .int_title {
    width: auto;
  }
  
}
/* Browser styles when browser max width is the follow. 
   Need menu click to make sidebar appear */

@media (max-width: 1024px) {
  #footer {
    margin-left: 0px;
  }
  div.doc-nav {
    margin-left: 103px;
  }

  div.toc-categories {
    display: block;
  }

  div.toc-categories .expand-toc-icon {
    font-size: 24px;
    /*padding-right: 10px;*/
    color: white;
  }

  .expand-toc-icon:hover,
  .expand-toc-icon:active {
    color: white;
    text-decoration: none;
  }

  #menu ul li.logo {
    /*padding-left: 70px; */
  }

  .int_text .sidebar {
    left: -293px;
    box-shadow: 0 0 13px rgba(0,0,0,0.3);
  }

  .int_text .sidebar.reveal {
    left: 0;
  }

  .int_text .main-content{
    margin-left: 0;
  }
  .int_title {
    margin-left: 63px;
  }
  .int_title h1 {
    font-size: 28px;
  }
}
@media (min-width: 1025px) {
  .mw {
    min-width: 100%;
  }
  nav.breadcrumbs {
    margin-left: 293px;
  }

  div.doc-nav {
    margin-left: 393px;
  }

  #footer {
    margin-left: 293px;
    text-align: left;
  }
  .main-content
  {
    margin-left: 293px;
  }
  #menu ul li.logo {
    padding-left: 30px;
  }
}

